syntax = "proto3";

package io.restorecommerce.contact_point;

import "io/restorecommerce/resource_base.proto";
import "io/restorecommerce/meta.proto";
import "io/restorecommerce/auth.proto";
import "io/restorecommerce/status.proto";

service Service {
  rpc Read (io.restorecommerce.resourcebase.ReadRequest) returns (ContactPointListResponse);
  rpc Create (ContactPointList) returns (ContactPointListResponse);
  rpc Delete (io.restorecommerce.resourcebase.DeleteRequest) returns (io.restorecommerce.resourcebase.DeleteResponse);
  rpc Update (ContactPointList) returns (ContactPointListResponse);
  rpc Upsert (ContactPointList) returns (ContactPointListResponse);
}

message Deleted {
  string id = 1;
}

message ContactPointList {
  repeated ContactPoint items = 1;
  uint32 total_count = 2;
  io.restorecommerce.auth.Subject subject = 3;
}

message ContactPointListResponse {
  repeated ContactPointResponse items = 1;
  uint32 total_count = 2;
  io.restorecommerce.status.OperationStatus operation_status = 3;
}

message ContactPointResponse {
  ContactPoint payload = 1;
  io.restorecommerce.status.Status status = 2;
}

message ContactPoint {
  string id = 1;
  io.restorecommerce.meta.Meta meta = 2;
  string physical_address_id = 3;
  string website = 4;
  string email = 5;
  string contact_point_type_id = 6;
  string telephone = 8;
  string timezone_id = 9;
  string locale_id = 10;
  string title = 11;
  string name1 = 12;
  string name2 = 13;
  string name3 = 14;
}
